--- a/pom.xml
+++ b/pom.xml
@@ -1,186 +1,186 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.lmproject</groupId>
-	<artifactId>InvoiceManagementSystem</artifactId>
+
+	<groupId>com.infobalt</groupId>
+	<artifactId>app-jsf-spring-jpa</artifactId>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>InvoiceManagementSystem Maven Webapp</name>
-	<url>http://maven.apache.org</url>
-
+	<name>${project.artifactId}</name>
+	<description>A simple project with war packaging that depends on JSF 2.2 and 
+        javaee 6, in that order.</description>
+	<url>http://jsf-spec.java.net/</url>
+	<build>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/</path>
+					<contextReloadable>true</contextReloadable>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<properties>
-		<junit.version>3.8.1</junit.version>
-		<primefaces.version>6.0</primefaces.version>
-		<jsf-api.version>2.2.12</jsf-api.version>
-		<jsf-impl.version>2.1.11</jsf-impl.version>
-		<h2.version>1.4.193</h2.version>
-		<spring-web.version>4.2.3.RELEASE</spring-web.version>
-		<spring-context.version>4.2.3.RELEASE</spring-context.version>
-		<javax.faces-api.version>2.2</javax.faces-api.version>
-		<javaee-api.version>7.0</javaee-api.version>
-		<hibernate-jpamodelgen.version>5.0.5.Final</hibernate-jpamodelgen.version>
-		<slf4j-api.version>1.7.2</slf4j-api.version>
-		<logback-access.version>1.2.1</logback-access.version>
-		<logback-classic.version>1.2.1</logback-classic.version>
-		<derby.version>10.13.1.1</derby.version>
-		<hibernate-core.version>5.2.8.Final</hibernate-core.version>
-		<spring-data-jpa.version>1.11.1.RELEASE</spring-data-jpa.version>
-		<jta.version>1.1</jta.version>
-		<hibernate-jpa.version>1.0.0.Final</hibernate-jpa.version>
-		<hibernate-validator.version>5.4.0.Final</hibernate-validator.version>
-		<themes.version>1.0.10</themes.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<spec.snapshot.version>2.2</spec.snapshot.version>
+		<maven.tomcat.contextReloadable>true</maven.tomcat.contextReloadable>
 	</properties>
-
 	<dependencies>
-
-		<!-- junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- Primefaces -->
-		<dependency>
-			<groupId>org.primefaces</groupId>
-			<artifactId>primefaces</artifactId>
-			<version>${primefaces.version}</version>
-		</dependency>
-
-		<!-- JSF Mojarra -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>${jsf-api.version}</version>
-		</dependency>
-
-		<!-- jsf-impl -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>${jsf-impl.version}</version>
-		</dependency>
-
-		<!-- h2 database -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>${h2.version}</version>
+			<version>1.4.190</version>
 		</dependency>
 
-		<!-- spring-web -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring-web.version}</version>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>5.3</version>
 		</dependency>
 
-		<!-- javax.faces-api -->
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>javax.faces-api</artifactId>
-			<version>${javax.faces-api.version}</version>
+			<version>${spec.snapshot.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- javaee-api -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>${javaee-api.version}</version>
+			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- spring-context -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.2.12</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.12</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring-context.version}</version>
+			<version>4.2.3.RELEASE</version>
 		</dependency>
 
-		<!-- hibernate-jpamodelgen -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.2.3.RELEASE</version>
+		</dependency>
+
+		<!-- - JPA, testing, logging -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>${hibernate-jpamodelgen.version}</version>
+			<version>5.0.5.Final</version>
 		</dependency>
-
-		<!-- slf4j-api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-api.version}</version>
+			<version>1.7.2</version>
 		</dependency>
-
-		<!-- logback-access -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-access</artifactId>
-			<version>${logback-access.version}</version>
+			<version>1.1.3</version>
 		</dependency>
-
-		<!-- logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>${logback-classic.version}</version>
+			<version>1.1.3</version>
 		</dependency>
-
-		<!-- derby -->
+		<!-- <dependency> -->
+		<!-- <groupId>ch.qos.logback</groupId> -->
+		<!-- <artifactId>logback-core</artifactId> -->
+		<!-- <version>1.1.3</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
-			<version>${derby.version}</version>
+			<version>10.12.1.1</version>
 		</dependency>
-
-		<!-- hibernate-core -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate-core.version}</version>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.0.5.Final</version>
 		</dependency>
-
-		<!-- spring-data-jpa -->
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>${spring-data-jpa.version}</version>
-		</dependency>
-
-		<!-- jta -->
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-			<version>${jta.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-
-		<!-- hibernate-jpa -->
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
-			<version>${hibernate-jpa.version}</version>
+			<version>1.0.0.Final</version>
 		</dependency>
 
-		<!-- hibernate-validator -->
+		<!-- spring data -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>${hibernate-validator.version}</version>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.9.1.RELEASE</version>
 		</dependency>
-
-		<!-- primefaces themes -->
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>all-themes</artifactId>
-			<version>${themes.version}</version>
+			<version>1.0.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.2.Final</version>
 		</dependency>
 
+
 	</dependencies>
+
 	<repositories>
+		<repository>
+			<id>java.net-maven2-SNAPSHOT-repository</id>
+			<name>Java.net SNAPSHOT-Repository for Maven</name>
+			<url>https://maven.java.net/content/repositories/snapshots/</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>java.net-maven2-repository</id>
+			<name>Java.net Repository for Maven</name>
+			<url>https://maven.java.net/content/repositories/releases/</url>
+			<layout>default</layout>
+		</repository>
 		<repository>
 			<id>pf-themes</id>
 			<name>Primefaces themes</name>
@@ -188,7 +188,4 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
-	<build>
-		<finalName>InvoiceManagementSystem</finalName>
-	</build>
 </project>
