--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,10 +25,10 @@
 		<param-name>com.sun.faces.enableViewStateIdRendering</param-name>
 		<param-value>false</param-value>
 	</context-param>
-	<context-param>
+<!-- 	<context-param>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
 		<param-value>/WEB-INF/faces-config.xml,/WEB-INF/navigacija.xml</param-value>
-	</context-param>
+	</context-param>  -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bootstrap</param-value>
@@ -47,7 +47,7 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>faces/authors.xhtml</welcome-file>
+		<welcome-file>faces/invoices.xhtml</welcome-file>
 	</welcome-file-list>
 
 	<context-param>
