--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<display-name>mojarra-regression-test</display-name>
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>excite-bike</param-value>
+	</context-param>
+
 	<description>A simple regression test to make it easier to get your bug fixed. The only reason we need a web.xml is to set the PROJECT_STAGE to Develoment.  If you have a web.xml, then you need to map the FacesServlet.</description>
 	<context-param>
 		<description>
@@ -25,14 +30,8 @@
 		<param-name>com.sun.faces.enableViewStateIdRendering</param-name>
 		<param-value>false</param-value>
 	</context-param>
-<!-- 	<context-param>
-		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>/WEB-INF/faces-config.xml,/WEB-INF/navigacija.xml</param-value>
-	</context-param>  -->
-	<context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>bootstrap</param-value>
-	</context-param>
+	<!-- <context-param> <param-name>javax.faces.CONFIG_FILES</param-name> <param-value>/WEB-INF/faces-config.xml,/WEB-INF/navigacija.xml</param-value> 
+		</context-param> -->
 
 	<!-- Faces Servlet -->
 	<servlet>
@@ -45,6 +44,7 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
 	</servlet-mapping>
+
 
 	<welcome-file-list>
 		<welcome-file>faces/invoices.xhtml</welcome-file>
