--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,15 @@
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
-			<plugin>
+			<!--  <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
+			</plugin>   -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -50,15 +46,17 @@
 		<slf4j-api.version>1.7.2</slf4j-api.version>
 		<logback-access.version>1.2.1</logback-access.version>
 		<logback-classic.version>1.2.1</logback-classic.version>
-		<derby.version>10.13.1.1</derby.version>
+	<!--	<derby.version>10.13.1.1</derby.version>  -->
 		<hibernate-entitymanager.version>5.0.5.Final</hibernate-entitymanager.version>   <!-- 5.2.8.Final not working !!! -->
 		<spring-data-jpa.version>1.11.1.RELEASE</spring-data-jpa.version>
 		<jta.version>1.1</jta.version>
 		<hibernate-jpa.version>1.0.0.Final</hibernate-jpa.version>
 		<hibernate-validator.version>5.4.0.Final</hibernate-validator.version>
 		<themes.version>1.0.10</themes.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version> 
+		
+	<!--	<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>   -->
 	</properties>
 
 	<dependencies>
@@ -158,11 +156,11 @@
 		</dependency>
 
 		<!-- derby -->
-		<dependency>
+	<!--	<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>${derby.version}</version>
-		</dependency>
+		</dependency>  -->
 
 		<!-- hibernate-entitymanager -->
 		<dependency>
@@ -209,18 +207,6 @@
 
 	</dependencies>
 	<repositories>
-		<repository>
-			<id>java.net-maven2-SNAPSHOT-repository</id>
-			<name>Java.net SNAPSHOT-Repository for Maven</name>
-			<url>https://maven.java.net/content/repositories/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>java.net-maven2-repository</id>
-			<name>Java.net Repository for Maven</name>
-			<url>https://maven.java.net/content/repositories/releases/</url>
-			<layout>default</layout>
-		</repository>
 		<repository>
 			<id>pf-themes</id>
 			<name>Primefaces themes</name>
